<resources>
    <string name="app_name">EatHealthyApp</string>
    <string name="price">price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="protein_label">Protein label</string>
    <string name="protein">Protein</string>
    <string name="carbs_label">Carbs label</string>
    <string name="fat_label">Fat label</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="nutrient_amt_placeholder">54g</string>
    <string name="food_name_placeholder">Potato Salad</string>
    <string name="kcal">kcal</string>
    <string name="button_to_food_detail">button to food detail</string>
    <string name="amt_placeholder">430</string>

</resources>
