<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@drawable/food_list_item_bg"
    android:paddingStart="40dp"
    android:paddingTop="28dp"
    android:paddingEnd="10dp"
    android:paddingBottom="28dp"
    tools:context=".fragments.sub_fragments.FragmentFoodListItem">


    <TextView
        android:id="@+id/tvFoodItemName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="false"
        android:text="@string/food_name_placeholder"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/tvFoodItemCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFoodDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodItemName">

        <ImageView
            android:id="@+id/proteinLabel"
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:contentDescription="@string/protein_label"
            android:src="@drawable/dot"
            android:tint="@color/purple" />

        <TextView
            android:id="@+id/tvFoodItemProtein"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nutrient_amt_placeholder"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/carbsLabel"
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:contentDescription="@string/carbs_label"
            android:src="@drawable/dot"
            android:tint="@color/green" />

        <TextView
            android:id="@+id/tvFoodItemCarbs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nutrient_amt_placeholder"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fatLabel"
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0"
            android:contentDescription="@string/fat_label"
            android:src="@drawable/dot"
            android:tint="@color/yellow" />

        <TextView
            android:id="@+id/tvFoodItemFat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nutrient_amt_placeholder"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnFoodDetail"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_to_food_detail"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chevron_right"
        android:tint="@color/colorDarkGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFoodItemCalories"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/amt_placeholder"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/tvKcalLabel"
        app:layout_constraintStart_toEndOf="@+id/tvFoodItemName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvKcalLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4sp"
        android:text="@string/kcal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnFoodDetail"
        app:layout_constraintStart_toEndOf="@+id/tvFoodItemCalories"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>